# pputil

./: Cargo.toml  README.adoc  brew_formulae.rb  cspell.config.yaml
.brew/: README.adoc  pputil.rb
.github/workflows/: add_assets_to_release.ts  main_auto_release.yml  release.yml  rust.yml
.github/workflows/scripts/: .gitignore  README.md  add_assets_to_release.mts  package-lock.json  package.json  tsconfig.json
src/: args.rs  compact.rs  helpers.rs  main.rs  print_json.rs  tui.rs  types.rs  yml_types.rs
src/tui/: details_popup.rs  mod.rs  tui_main.rs
