[package]
name = "pputil"
authors = ["jens jaehrig"]
version = "1.1.13"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.22", features = ["cargo", "derive"] }
cms = "0.2.3"
comfy-table = "7.1.3"
const_format = "0.2.34"
der = { version = "0.7.9", features = ["std"] }
dirs = "5.0.1"
oid-registry = { version = "0.7.1", features = ["crypto"] }
paths-as-strings = "0.1.1"
plist = "1.7.0"
serde = "1.0.215"
serde_yml = "0.0.12"
shellexpand = "3.1.1"
termsize = "0.1.9"
color-eyre = "0.6.3"
ratatui = "0.29.0"
crossterm = "0.28.1"
derive_setters = "0.1.8"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
queue = "0.3.2-final"
openssl = "0.10.73"
itertools = "0.14.0"
serde_json = "1.0.142"
base64 = "0.22.1"
